--- a/src/main/webapp/WEB-INF/template/Layout.xhtml
+++ b/src/main/webapp/WEB-INF/template/Layout.xhtml
@@ -4,7 +4,8 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
-	<title><ui:insert name="titulo">Sistema Financeiro</ui:insert>
+	<title>
+		<ui:insert name="titulo">Sistema Financeiro</ui:insert>
 	</title>
 	<h:outputStylesheet library="biblioteca" name="estilo.css" />
 </h:head>
